syntax = "proto3";

package proto;

import "common.proto";

option java_multiple_files = true;
option java_package = "vn.elca.training.proto.salary";

message SalaryResponse {
    uint64 id = 1;
    string avs_number = 2;
    string first_name = 3;
    string last_name = 4;
    string start_date = 5;
    string end_date = 6;
    string avs_amount = 7;
    string ac_amount = 8;
    string af_amount = 9;
}

message DecimalValue {
    uint32 scale = 1;
    uint32 precision = 2;
    bytes value = 3;
}

message SalaryCreateRequest {
    string avs_number = 2;
    string first_name = 3;
    string last_name = 4;
    string start_date = 5;
    string end_date = 6;
    string avs_amount = 7;
    string ac_amount = 8;
    string af_amount = 9;
}

message SalaryListRequest {
    uint64 employer_id = 1;
    PagingRequest paging_request = 2;
}

message SalaryListResponse {
    PagingResponse paging_response = 1;
    repeated SalaryResponse salaries = 2;
}

service SalaryService {
    rpc GetSalariesByEmployerId (SalaryListRequest) returns (SalaryListResponse);
    rpc ExportFilSalaries (EmployerId) returns (FilePath) {};
}